<resources>
    <string name="app_name">"My App Portfolio "</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_toast">Spotify Streamer app coming soon...</string>
    <string name="scores_app_toast">Scores app coming soon...</string>
    <string name="library_app_toast">Library app coming soon...</string>
    <string name="build_it_bigger_toast"> Build It Bigger app coming soon...</string>
    <string name="da_reader_toast">Da Reader coming soon...</string>
    <string name="capstone_toast">My Awesome app coming soon...</string>

    <string name="title1">Daniel\'s </string>
    <string name="title2">Nanodegree app Portfolio</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger"> Build It Bigger</string>
    <string name="da_reader">Da Reader</string>
    <string name="capstone">My awesome app!</string>
</resources>
